--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,7 @@ jobs:
       - uses: jerray/publish-docker-action@v1.0.3
         with:
           auto_tag: true
+          repository: kiosksh/kiosk
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: azure/setup-helm@v1
