--- a/examples/account-default-template.yaml
+++ b/examples/account-default-template.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   spaceClusterRole: kiosk-space-admin
   spaceDefaultTemplates:
-  - space-restrictions
+  - template: space-restrictions
   subjects:
   - kind: User
     name: john
