--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,14 +8,14 @@ on:
       - master
     paths:
       - "**.go"
-      - "hack/test.bash"
+      - "hack/test.sh"
       - ".github/workflows/release.yaml"
   pull_request:
     branches:
       - master
     paths:
       - "**.go"
-      - "hack/test.bash"
+      - "hack/test.sh"
       - ".github/workflows/release.yaml"
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
       - name: Test
-        run: ./hack/test.bash
+        run: ./hack/test.sh
   release:
     if: startsWith(github.ref, 'refs/tags/v') == true
     runs-on: ubuntu-18.04
