Fix account quota issue with crds

--- a/chart/templates/validatingwebhookconfiguration.yaml
+++ b/chart/templates/validatingwebhookconfiguration.yaml
@@ -33,7 +33,7 @@ webhooks:
       name: {{ template "kiosk.fullname" . }}
       namespace: {{ .Release.Namespace }}
       path: /validate-quota
-  failurePolicy: Ignore
+  failurePolicy: Fail
   namespaceSelector:
     matchExpressions:
     - key: kiosk.sh/account
