refactor structure & remove auth
This commit changes the following things:
- Refactoring of the apis structure: code for registering the api groups is now fully auto generated by the pkg/gen package
- Removal of the auth cache: instead we use the kubernetes authorizer directly
- Merge the binary manager and apiserver together to remove complexity and allow cache sharing
- Remove dependency of 'k8s.io/kubernetes' that pollutes the go.mod and makes dependency management more difficult: needed 'k8s.io/kubernetes' files are now copied to the kiosk/kube folder

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -6,16 +6,7 @@ replicaCount: 1
 
 manager:
   command: 
-  - /manager
-  args: []
-  resources:
-    requests:
-      memory: 128Mi
-      cpu: 50m
-
-apiserver:
-  command:
-  - /apiserver
+  - /kiosk
   args: []
   resources:
     requests:
