--- a/chart/crds/config.kiosk.sh_templateinstances.yaml
+++ b/chart/crds/config.kiosk.sh_templateinstances.yaml
@@ -1,92 +1,22 @@
-
----
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
-  creationTimestamp: null
   name: templateinstances.config.kiosk.sh
 spec:
-  group: config.kiosk.sh
-  preserveUnknownFields: false
-  names:
-    kind: TemplateInstance
-    listKind: TemplateInstanceList
-    plural: templateinstances
-    singular: templateinstance
-  scope: Namespaced
-  subresources:
-    status: {}
-  validation:
-    openAPIV3Schema:
-      description: TemplateInstance is the Schema for the templatesinstance API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: TemplateInstanceSpec holds the expected cluster status of the
-            template instance
-          properties:
-            sync:
-              description: If true the template instance will keep the deployed resources
-                in sync with the template.
-              type: boolean
-            template:
-              description: The template to instantiate. This is an immutable field
-              type: string
-          required:
-          - template
-          type: object
-        status:
-          description: TemplateInstanceStatus describes the current status of the
-            template instance in the cluster
-          properties:
-            message:
-              description: A human readable message indicating details about why the
-                namespace is in this condition.
-              type: string
-            observedAt:
-              description: LastAppliedAt indicates when the template was last applied
-              format: date-time
-              type: string
-            reason:
-              description: A brief CamelCase message indicating details about why
-                the namespace is in this state.
-              type: string
-            status:
-              description: Status holds the template instances status
-              type: string
-            templateManifests:
-              description: TemplateManifests are the manifests that were rendered
-                before
-              type: string
-            templateResourceVersion:
-              description: TemplateResourceVersion is the resource version of the
-                template that was applied
-              type: string
-          required:
-          - status
-          type: object
-      type: object
-  version: v1alpha1
-  versions:
-  - name: v1alpha1
-    served: true
-    storage: true
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
+  conversion:
+    strategy: None
+    group: config.kiosk.sh
+    names:
+      kind: TemplateInstance
+      listKind: TemplateInstanceList
+      plural: templateinstances
+      singular: templateinstance
+    scope: Namespaced
+    preserveUnknownFields: true
+    subresources:
+      status: {}
+    version: v1alpha1
+    versions:
+      - name: v1alpha1
+        served: true
+        storage: true
