--- a/chart/templates/apiserviceservice.yaml
+++ b/chart/templates/apiserviceservice.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kiosk.fullname" . }}-apiservice
+  name: kiosk-apiservice
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "kiosk.fullname" . }}
