set ownerreference on webhook and apiservice

--- a/devspace.yaml
+++ b/devspace.yaml
@@ -43,7 +43,7 @@ profiles:
               - hack/
               - /gen
               - /docs
-              - config/
+              - /config
               - bin/
               - .vscode/
               - .git/
