fix: return correct resource version on space update

--- a/devspace.yaml
+++ b/devspace.yaml
@@ -4,6 +4,7 @@ images:
     image: kiosksh/kiosktest
     build:
       docker:
+        skipPush: true
         options:
           target: builder
 deployments:
