build: add resource limits

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -15,6 +15,9 @@ kiosk:
   - /kiosk
   args: []
   resources:
+    limits:
+      memory: 512Mi
+      cpu: "1"
     requests:
       memory: 128Mi
       cpu: 50m
