--- a/chart/templates/apiserviceservice.yaml
+++ b/chart/templates/apiserviceservice.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.apiservice }}
+{{- if .Values.apiservice.create }}
 apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
@@ -29,3 +31,5 @@ spec:
   selector:
     app: {{ template "kiosk.fullname" . }}
     release: {{ .Release.Name }}
+{{- end }}
+{{- end }}
