chart: correct port names

--- a/chart/templates/apiserviceservice.yaml
+++ b/chart/templates/apiserviceservice.yaml
@@ -25,7 +25,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   ports:
-    - port: 443
+    - name: apiservice
+      port: 443
       protocol: TCP
       targetPort: 8443
   selector:
