--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,14 +34,38 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v') == true
     runs-on: ubuntu-18.04
     steps:
-      - name: Check out code
-        uses: actions/checkout@v1
-      - uses: jerray/publish-docker-action@v1.0.3
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          auto_tag: true
-          repository: kiosksh/kiosk
+          fetch-depth: 0
+      - name: Get Docker tags
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: |
+            kiosksh/kiosk
+          tags: |
+            type=semver,pattern={{version}}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push the Debian based image
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          file: Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
+      - name: Images digests
+        run: echo ${{ steps.docker_build.outputs.digest }}
       - uses: azure/setup-helm@v1
         with:
           version: "v3.0.3"
