switch metrics to false, add imagePullPolicy variable

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -47,6 +47,8 @@ service:
   targetPort: 9443
 
 metrics:
-  enabled: true
+  enabled: false
   serviceMonitor:
-    enabled: true
+    enabled: false
+
+imagePullPolicy: Always
