--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -60,6 +60,7 @@ spec:
         {{- else }}
         image: "kiosksh/kiosk:{{ .Chart.Version }}"
         {{- end }}
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
         name: kiosk
         env:
           {{- if .Values.webhook }}
