--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -41,6 +41,8 @@ serviceAccount:
 nameOverride: ""
 fullnameOverride: ""
 
+imagePullPolicy: Always
+
 service:
   type: ClusterIP
   port: 443
@@ -48,7 +50,29 @@ service:
 
 metrics:
   enabled: false
+  ## Create a servicemonitor for the operator
+  ##
   serviceMonitor:
     enabled: false
+    ## Scrape interval. If not set, the Prometheus default scrape interval is used.
+    ##
+    interval: ""
+    ## Scrape timeout. If not set, the Prometheus default scrape timeout is used.
+    scrapeTimeout: ""
 
-imagePullPolicy: Always
+    ## Metric relabel configs to apply to samples before ingestion.
+    ##
+    metricRelabelings: []
+    # - action: keep
+    #   regex: 'kube_(daemonset|deployment|pod|namespace|node|statefulset).+'
+    #   sourceLabels: [__name__]
+
+    #   relabel configs to apply to samples before ingestion.
+    ##
+    relabelings: []
+    # - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #   separator: ;
+    #   regex: ^(.*)$
+    #   targetLabel: nodename
+    #   replacement: $1
+    #   action: replace
